--- a/css/subpages-general.css
+++ b/css/subpages-general.css
@@ -211,7 +211,7 @@ a.back:hover {
 
 html, body {
 	font-size: 100%;
-	overflow-y: scroll;
+	overflow: auto;
 	
 	-webkit-transition-duration: 0.5s;
 	transition-duration: 0.5s;
